--- a/Login.html
+++ b/Login.html
@@ -47,9 +47,9 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
+    <a href="Unlogged-user-pages/Entertainment.html"><button class="button button1"></button></a>
+    <a href="Unlogged-user-pages/science.html"><button class="button button3"></button></a>
+    <a href="Unlogged-user-pages/Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
 </body>
