--- a/ChangeUsername.html
+++ b/ChangeUsername.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <style>
         .w3-btn {margin-bottom:10px;}
     </style>
@@ -44,9 +45,9 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+    <a href="science.html"><button id="button3" class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -93,6 +94,6 @@
     </form>
 </div>
 
-
+<script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
