--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Mutual Help</title>
 </head>
 
@@ -41,12 +42,12 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+    <a href="science.html"><button id="button3" class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
 </div>
 
-
+<script src="scripts/backgroundChange.js"></script>
 </body>
 
 </html>
