--- a/index.html
+++ b/index.html
@@ -3,50 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Home</title>
 </head>
 
 <body>
 
-    <div id="profile_div">
-        <ul class="profile-wrapper">
-            <li>
-                <div class="profile">
-                    <a href ="#" class="name">UserExample</a>
-                    <ul class="menu">
-                        <li>
-                            <a href="#">My profile</a>
-                            <div class="horizontal_menu">
-                                <ul>
-                                    <a href="interests.html"><li>Interests</li></a>
-                                    <a href="myevents.html"><li>My events</li></a>
-                                    <a href="myvideos.html"><li>My videos</li></a>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a id="page_settings" href="#">Settings</a>
-                            <div class="horizontal_menu" hidden>
-                                    <ul>
-                                        <a href="ChangePassword.html"><li>Change password</li></a>
-                                        <a href="ChangeUsername.html"><li>Change username</li></a>
-                                        <a href="ChangeImage.html"><li>Change image</li></a>
-                                    </ul>
-                            </div>
-                        </li>
-                        <li><a id="page_logout" href="Login.html">Log out</a></li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
+<div id="profile_div">
+    <ul class="profile-wrapper">
+        <li>
+            <div class="profile">
+                <a href="#" class="name">UserExample</a>
+                <ul class="menu">
+                    <li>
+                        <a href="#">My profile</a>
+                        <div class="horizontal_menu">
+                            <ul>
+                                <a href="interests.html">
+                                    <li>Interests</li>
+                                </a>
+                                <a href="myevents.html">
+                                    <li>My events</li>
+                                </a>
+                                <a href="myvideos.html">
+                                    <li>My videos</li>
+                                </a>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a id="page_settings" href="#">Settings</a>
+                        <div class="horizontal_menu" hidden>
+                            <ul>
+                                <a href="ChangePassword.html">
+                                    <li>Change password</li>
+                                </a>
+                                <a href="ChangeUsername.html">
+                                    <li>Change username</li>
+                                </a>
+                                <a href="ChangeImage.html">
+                                    <li>Change image</li>
+                                </a>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+                </ul>
+            </div>
+        </li>
+    </ul>
 
-    </div>
+</div>
 
+<div id="contents">
+    <a href="Entertainment.html">
+        <button id="button1" class="button button1"><h2>Entertainment</h2></button>
+    </a>
+    <a href="science.html">
+        <button id="button3" class="button button3"><h2>Science</h2></button>
+    </a>
+    <a href="Mutual%20Help.html">
+        <button id="button2" class="button button2"><h2>Mutual help</h2></button>
+    </a>
+</div>
 
-    <div id="contents">
-        <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
-        <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
-        <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
-    </div>
+<script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
