--- a/interests.html
+++ b/interests.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Interests</title>
 
 </head>
@@ -44,26 +45,27 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+    <a href="science.html"><button id="button3" class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
 </div>
+
 
 <div id="navMyProfile">
     <style>
         .navUL {
             width: 109%;
-            left: 29%;
-        }
+            left: 29%;        }
     </style>
     <ul class="navUL">
+
         <li class="navLi"><a href="interests.html">Interests</a></li>
-        <li class="navLi"><a href="createNewEvent.html">My Events</a></li>
+        <li class="navLi"><a href="myevents.html">My Events</a></li>
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
 
 
-
+<script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
